Make sure popup is readable with lwthemes

--- a/src/chrome/global/popup.css
+++ b/src/chrome/global/popup.css
@@ -51,6 +51,7 @@ panel {
 	min-width: 1px;
 	padding: 2px;
 	border: 1px solid ThreeDShadow;
+	color: MenuText;
 }
 menupopup {
 	-moz-appearance: none;
